# sydney

./: .gitignore  .license_template  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yaml
src/: app.rs  command.rs  input.rs  main.rs  stateful_list.rs  ui.rs  url.rs
